robotics  page fix

--- a/templates/page/onlinerobotics.html
+++ b/templates/page/onlinerobotics.html
@@ -505,6 +505,216 @@
             </div>
         </section>
 
+        <section>
+            <div class="container">
+                <div class="rows">
+                    <img class="size-medium aligncenter divider" src="/CA/uploads/divider-1-300x23-1.png" alt="divider" width="300" height="auto"/>
+                </div>
+                <div class="rows">
+                    <article>
+                        <div class="pb-text" id="CampsSchedule">
+                            <h5>1 Week Camps (2 hours/day)</h5>
+                                <p>
+                                    Don’t see a week that works for your schedule? <a href="/online-coding-classes-for-kids#CreateYourOwn">Create your Own Camp
+                                    </a>.                        
+                                </p>
+                                <p>
+                                    <span style="color: green">Allowed in this class: PC, Mac, Chromebook</span>
+                                    <br>
+                                    <span style="color: red">Not allowed in this class: Tablet, iPads</span>              
+                                </p>
+                                <div id="responsiveTable">
+                                <table style="width: 100%;" class="table table-responsive">
+                                    <thead>
+                                        <tr>
+                                            <th>Session Dates</th>
+                                            <th>Time</th>
+                                            <th>Class</th>
+                                            <th>Grade level</th>
+                                            <th>Price</th>
+                                            <th></th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td data-title="Session Dates">Mon-Fri Aug 10 - Aug 14</td>
+                                            <td data-title="Time" data-start="2020-08-10 09:30:00" data-end="2020-08-10 11:30:00" data-days="" class="section-start">9:30 am - 11:30 am EDT EST</td>
+                                            <td data-title="Class"><a href="https://www.codeadvantage.org/online/advanced-coding" target="_blank" title="Python Level 1" style="text-decoration: none"><strong class="class-name" style="color: #4ccef0;">Python Level 1</strong></a>
+                                                <br><strong style="color:#FE6500">
+                                                    Sold Out
+                                                    </strong>                                                                                                                                  <div style="font-size: 12px; color: #707070; font-weight: bold;">No iPads or Tablets</div>
+                                            </td>
+                                            <td data-title="Grade level">5th - 10th</td>       
+                                            <td data-title="Price">
+                                                $185									
+                                            </td>
+                                            <td>  
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td data-title="Session Dates">Mon-Fri Aug 10 - Aug 14</td>
+                                            <td data-title="Time" data-start="2020-08-10 11:15:00" data-end="2020-08-10 13:15:00" data-days="" class="section-start">11:15 am - 1:15 pm EDT EST</td>
+                                            <td data-title="Class"><a href="https://www.codeadvantage.org/online/advanced-coding" target="_blank" title="Python Level 2" style="text-decoration: none"><strong class="class-name" style="color: #4ccef0;">Python Level 2</strong></a>
+                                                <div style="font-size: 12px; color: #707070; font-weight: bold;">Prerequisite: Level 1</div>
+                                            </td>
+                                            <td data-title="Grade level">5th - 10th</td>
+                                            <td data-title="Price">
+                                                $185									
+                                            </td>
+                                            <td>
+                                                <div class="pb-button pb-button-size-small">
+                                                    <a href="#" class="pb-window-target-self section-register" data-id="GP2AHBTAGOMHFPVY">
+                                                        <span class="pb-button-box">
+                                                            <span class="pb-button-content">Register</span>
+                                                        </span>
+                                                    </a>
+                                                </div>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td data-title="Session Dates">Mon-Fri Aug 10 - Aug 14</td>
+                                            <td data-title="Time" data-start="2020-08-10 13:15:00" data-end="2020-08-10 15:15:00" data-days="" class="section-start">1:15 pm - 3:15 pm EDT EST</td>
+                                            <td data-title="Class"><a href="https://www.codeadvantage.org/online/advanced-coding" target="_blank" title="Python Level 3" style="text-decoration: none"><strong class="class-name" style="color: #4ccef0;">Python Level 3</strong></a>
+                                                                                                                                    <div style="font-size: 12px; color: #707070; font-weight: bold;">Prerequisite: Level 2</div>
+                                                                                    </td>
+                                            <td data-title="Grade level">5th - 10th</td>
+        
+                                            <td data-title="Price">
+                                                $185									</td>
+                                            <td>
+                                                                                            <div class="pb-button pb-button-size-small">
+                                                        <a href="#" class="pb-window-target-self section-register" data-id="LVMOTRQFCHV86UHO">
+                                        <span class="pb-button-box">
+                                            <span class="pb-button-content">Register</span>
+                                        </span>
+                                                        </a>
+                                                    </div>
+                                                
+                                            </td>
+        
+                                        </tr>
+                                                                    <tr>
+                                            <td data-title="Session Dates">Mon-Fri Aug 10 - Aug 14</td>
+                                            <td data-title="Time" data-start="2020-08-10 18:15:00" data-end="2020-08-10 20:15:00" data-days="" class="section-start">6:15 pm - 8:15 pm EDT EST</td>
+                                            <td data-title="Class"><a href="https://www.codeadvantage.org/online/advanced-coding" target="_blank" title="Python: Animal Expedition" style="text-decoration: none"><strong class="class-name" style="color: #4ccef0;">Python: Animal Expedition</strong></a>
+                                                                                                                                    <div style="font-size: 12px; color: #707070; font-weight: bold;">No iPads or Tablets</div>
+                                                                                    </td>
+                                            <td data-title="Grade level">5th - 10th</td>
+        
+                                            <td data-title="Price">
+                                                $185									</td>
+                                            <td>
+                                                                                            <div class="pb-button pb-button-size-small">
+                                                        <a href="#" class="pb-window-target-self section-register" data-id="MSVXOGKCU35ECLUK">
+                                        <span class="pb-button-box">
+                                            <span class="pb-button-content">Register</span>
+                                        </span>
+                                                        </a>
+                                                    </div>
+                                                
+                                            </td>
+        
+                                        </tr>
+                                                                    <tr>
+                                            <td data-title="Session Dates">Mon-Fri Aug 10 - Aug 14</td>
+                                            <td data-title="Time" data-start="2020-08-10 09:00:00" data-end="2020-08-10 11:00:00" data-days="" class="section-start">9:00 am - 11:00 am EDT EST</td>
+                                            <td data-title="Class"><a href="https://www.codeadvantage.org/online/advanced-coding" target="_blank" title="Python: Game Quest" style="text-decoration: none"><strong class="class-name" style="color: #4ccef0;">Python: Game Quest</strong></a>
+                                                                                                                                    <div style="font-size: 12px; color: #707070; font-weight: bold;">No iPads or Tablets</div>
+                                                                                    </td>
+                                            <td data-title="Grade level">5th - 10th</td>
+        
+                                            <td data-title="Price">
+                                                $185									</td>
+                                            <td>
+                                                                                            <div class="pb-button pb-button-size-small">
+                                                        <a href="#" class="pb-window-target-self section-register" data-id="XPE9NDZEIMCXBBYQ">
+                                        <span class="pb-button-box">
+                                            <span class="pb-button-content">Register</span>
+                                        </span>
+                                                        </a>
+                                                    </div>
+                                                
+                                            </td>
+        
+                                        </tr>
+                                                                    <tr>
+                                            <td data-title="Session Dates">Mon-Fri Aug 17 - Aug 21</td>
+                                            <td data-title="Time" data-start="2020-08-17 09:30:00" data-end="2020-08-17 11:30:00" data-days="" class="section-start">9:30 am - 11:30 am EDT EST</td>
+                                            <td data-title="Class"><a href="https://www.codeadvantage.org/online/advanced-coding" target="_blank" title="Python Level 2" style="text-decoration: none"><strong class="class-name" style="color: #4ccef0;">Python Level 2</strong></a>
+                                                                                                                                    <div style="font-size: 12px; color: #707070; font-weight: bold;">Prerequisite: Level 1</div>
+                                                                                    </td>
+                                            <td data-title="Grade level">5th - 10th</td>
+        
+                                            <td data-title="Price">
+                                                $185									</td>
+                                            <td>
+                                                                                            <div class="pb-button pb-button-size-small">
+                                                        <a href="#" class="pb-window-target-self section-register" data-id="GF7RZFFFW7BY8SIU">
+                                        <span class="pb-button-box">
+                                            <span class="pb-button-content">Register</span>
+                                        </span>
+                                                        </a>
+                                                    </div>
+                                                
+                                            </td>
+        
+                                        </tr>
+                                                                    <tr>
+                                            <td data-title="Session Dates">Mon-Fri Aug 17 - Aug 21</td>
+                                            <td data-title="Time" data-start="2020-08-17 18:15:00" data-end="2020-08-17 20:15:00" data-days="" class="section-start">6:15 pm - 8:15 pm EDT EST</td>
+                                            <td data-title="Class"><a href="https://www.codeadvantage.org/online/advanced-coding" target="_blank" title="Python: Game Quest" style="text-decoration: none"><strong class="class-name" style="color: #4ccef0;">Python: Game Quest</strong></a>
+                                                                                                                                    <div style="font-size: 12px; color: #707070; font-weight: bold;">No iPads or Tablets</div>
+                                                                                    </td>
+                                            <td data-title="Grade level">5th - 10th</td>
+        
+                                            <td data-title="Price">
+                                                $185									</td>
+                                            <td>
+                                                                                            <div class="pb-button pb-button-size-small">
+                                                        <a href="#" class="pb-window-target-self section-register" data-id="8LU2CS5LWGBEVM2F">
+                                        <span class="pb-button-box">
+                                            <span class="pb-button-content">Register</span>
+                                        </span>
+                                                        </a>
+                                                    </div>
+                                                
+                                            </td>
+        
+                                        </tr>
+                                                                    <tr>
+                                            <td data-title="Session Dates">Mon-Fri Aug 24 - Aug 28</td>
+                                            <td data-title="Time" data-start="2020-08-24 09:30:00" data-end="2020-08-24 11:30:00" data-days="" class="section-start">9:30 am - 11:30 am EDT EST</td>
+                                            <td data-title="Class"><a href="https://www.codeadvantage.org/online/advanced-coding" target="_blank" title="Python Level 3" style="text-decoration: none"><strong class="class-name" style="color: #4ccef0;">Python Level 3</strong></a>
+                                                                                                                                    <div style="font-size: 12px; color: #707070; font-weight: bold;">Prerequisite: Level 2</div>
+                                                                                    </td>
+                                            <td data-title="Grade level">5th - 10th</td>
+        
+                                            <td data-title="Price">
+                                                $185									</td>
+                                            <td>
+                                                                                            <div class="pb-button pb-button-size-small">
+                                                        <a href="#" class="pb-window-target-self section-register" data-id="NU0IAWN5QRJZ2ND2">
+                                        <span class="pb-button-box">
+                                            <span class="pb-button-content">Register</span>
+                                        </span>
+                                                        </a>
+                                                    </div>
+                                                
+                                            </td>
+        
+                                        </tr>
+                                                                </tbody>
+                                </table>
+                            </div>
+                            <p>
+                            Don’t see a week that works for your schedule? 
+                            <a href="/online-coding-classes-for-kids#CreateYourOwn">Create your Own Camp
+                            </a>.                    </p>
+                    </article>
+                </div>
+            </div>
+        </section>
+
         <section>  
             <div class="container">
                 <div class="rows">
