--- a/templates/page/onlinerobotics.html
+++ b/templates/page/onlinerobotics.html
@@ -538,7 +538,7 @@
                                     <tbody>
                                         <tr>
                                             <td data-title="Session Dates">TBD</td>
-                                            <td data-title="Time" data-start="2020-08-10 09:30:00" data-end="2020-08-10 11:30:00" data-days="" class="section-start">9:30 am - 11:30 am EDT EST</td>
+                                            <td data-title="Time" data-start="2020-08-10 09:30:00" data-end="2020-08-10 11:30:00" data-days="" class="section-start">TBD</td>
                                             <td data-title="Class"><a href="https://www.codeadvantage.org/online/advanced-coding" target="_blank" title="Python Level 1" style="text-decoration: none"><strong class="class-name" style="color: #4ccef0;">Python Level 1</strong></a>
                                                 <br><strong style="color:#FE6500">
                                                     Sold Out
@@ -546,20 +546,20 @@
                                             </td>
                                             <td data-title="Grade level">5th - 10th</td>       
                                             <td data-title="Price">
-                                                $185									
+                                                TBD									
                                             </td>
                                             <td>  
                                             </td>
                                         </tr>
                                         <tr>
                                             <td data-title="Session Dates">TBD</td>
-                                            <td data-title="Time" data-start="2020-08-10 11:15:00" data-end="2020-08-10 13:15:00" data-days="" class="section-start">11:15 am - 1:15 pm EDT EST</td>
+                                            <td data-title="Time" data-start="2020-08-10 11:15:00" data-end="2020-08-10 13:15:00" data-days="" class="section-start">TBD</td>
                                             <td data-title="Class"><a href="https://www.codeadvantage.org/online/advanced-coding" target="_blank" title="Python Level 2" style="text-decoration: none"><strong class="class-name" style="color: #4ccef0;">Python Level 2</strong></a>
                                                 <div style="font-size: 12px; color: #707070; font-weight: bold;">Prerequisite: Level 1</div>
                                             </td>
                                             <td data-title="Grade level">5th - 10th</td>
                                             <td data-title="Price">
-                                                $185									
+                                                TBD									
                                             </td>
                                             <td>
                                                 <div class="pb-button pb-button-size-small">
@@ -573,14 +573,14 @@
                                         </tr>
                                         <tr>
                                             <td data-title="Session Dates">TBD</td>
-                                            <td data-title="Time" data-start="2020-08-10 13:15:00" data-end="2020-08-10 15:15:00" data-days="" class="section-start">1:15 pm - 3:15 pm EDT EST</td>
+                                            <td data-title="Time" data-start="2020-08-10 13:15:00" data-end="2020-08-10 15:15:00" data-days="" class="section-start">TBD</td>
                                             <td data-title="Class"><a href="https://www.codeadvantage.org/online/advanced-coding" target="_blank" title="Python Level 3" style="text-decoration: none"><strong class="class-name" style="color: #4ccef0;">Python Level 3</strong></a>
                                                                                                                                     <div style="font-size: 12px; color: #707070; font-weight: bold;">Prerequisite: Level 2</div>
                                                                                     </td>
                                             <td data-title="Grade level">5th - 10th</td>
         
                                             <td data-title="Price">
-                                                $185									</td>
+                                                TBD									</td>
                                             <td>
                                                                                             <div class="pb-button pb-button-size-small">
                                                         <a href="#" class="pb-window-target-self section-register" data-id="LVMOTRQFCHV86UHO">
@@ -595,14 +595,14 @@
                                         </tr>
                                                                     <tr>
                                             <td data-title="Session Dates">TBD</td>
-                                            <td data-title="Time" data-start="2020-08-10 18:15:00" data-end="2020-08-10 20:15:00" data-days="" class="section-start">6:15 pm - 8:15 pm EDT EST</td>
+                                            <td data-title="Time" data-start="2020-08-10 18:15:00" data-end="2020-08-10 20:15:00" data-days="" class="section-start">TBD</td>
                                             <td data-title="Class"><a href="https://www.codeadvantage.org/online/advanced-coding" target="_blank" title="Python: Animal Expedition" style="text-decoration: none"><strong class="class-name" style="color: #4ccef0;">Python: Animal Expedition</strong></a>
                                                                                                                                     <div style="font-size: 12px; color: #707070; font-weight: bold;">No iPads or Tablets</div>
                                                                                     </td>
                                             <td data-title="Grade level">5th - 10th</td>
         
                                             <td data-title="Price">
-                                                $185									</td>
+                                                TBD									</td>
                                             <td>
                                                                                             <div class="pb-button pb-button-size-small">
                                                         <a href="#" class="pb-window-target-self section-register" data-id="MSVXOGKCU35ECLUK">
@@ -617,14 +617,14 @@
                                         </tr>
                                                                     <tr>
                                             <td data-title="Session Dates">TBD</td>
-                                            <td data-title="Time" data-start="2020-08-10 09:00:00" data-end="2020-08-10 11:00:00" data-days="" class="section-start">9:00 am - 11:00 am EDT EST</td>
+                                            <td data-title="Time" data-start="2020-08-10 09:00:00" data-end="2020-08-10 11:00:00" data-days="" class="section-start">TBD</td>
                                             <td data-title="Class"><a href="https://www.codeadvantage.org/online/advanced-coding" target="_blank" title="Python: Game Quest" style="text-decoration: none"><strong class="class-name" style="color: #4ccef0;">Python: Game Quest</strong></a>
                                                                                                                                     <div style="font-size: 12px; color: #707070; font-weight: bold;">No iPads or Tablets</div>
                                                                                     </td>
                                             <td data-title="Grade level">5th - 10th</td>
         
                                             <td data-title="Price">
-                                                $185									</td>
+                                                TBD									</td>
                                             <td>
                                                                                             <div class="pb-button pb-button-size-small">
                                                         <a href="#" class="pb-window-target-self section-register" data-id="XPE9NDZEIMCXBBYQ">
@@ -639,14 +639,14 @@
                                         </tr>
                                                                     <tr>
                                             <td data-title="Session Dates">TBD</td>
-                                            <td data-title="Time" data-start="2020-08-17 09:30:00" data-end="2020-08-17 11:30:00" data-days="" class="section-start">9:30 am - 11:30 am EDT EST</td>
+                                            <td data-title="Time" data-start="2020-08-17 09:30:00" data-end="2020-08-17 11:30:00" data-days="" class="section-start">TBD</td>
                                             <td data-title="Class"><a href="https://www.codeadvantage.org/online/advanced-coding" target="_blank" title="Python Level 2" style="text-decoration: none"><strong class="class-name" style="color: #4ccef0;">Python Level 2</strong></a>
                                                                                                                                     <div style="font-size: 12px; color: #707070; font-weight: bold;">Prerequisite: Level 1</div>
                                                                                     </td>
                                             <td data-title="Grade level">5th - 10th</td>
         
                                             <td data-title="Price">
-                                                $185									</td>
+                                                TBD									</td>
                                             <td>
                                                                                             <div class="pb-button pb-button-size-small">
                                                         <a href="#" class="pb-window-target-self section-register" data-id="GF7RZFFFW7BY8SIU">
@@ -661,14 +661,14 @@
                                         </tr>
                                                                     <tr>
                                             <td data-title="Session Dates">TBD1</td>
-                                            <td data-title="Time" data-start="2020-08-17 18:15:00" data-end="2020-08-17 20:15:00" data-days="" class="section-start">6:15 pm - 8:15 pm EDT EST</td>
+                                            <td data-title="Time" data-start="2020-08-17 18:15:00" data-end="2020-08-17 20:15:00" data-days="" class="section-start">TBD</td>
                                             <td data-title="Class"><a href="https://www.codeadvantage.org/online/advanced-coding" target="_blank" title="Python: Game Quest" style="text-decoration: none"><strong class="class-name" style="color: #4ccef0;">Python: Game Quest</strong></a>
                                                                                                                                     <div style="font-size: 12px; color: #707070; font-weight: bold;">No iPads or Tablets</div>
                                                                                     </td>
                                             <td data-title="Grade level">5th - 10th</td>
         
                                             <td data-title="Price">
-                                                $185									</td>
+                                                TBD									</td>
                                             <td>
                                                                                             <div class="pb-button pb-button-size-small">
                                                         <a href="#" class="pb-window-target-self section-register" data-id="8LU2CS5LWGBEVM2F">
@@ -683,14 +683,14 @@
                                         </tr>
                                                                     <tr>
                                             <td data-title="Session Dates">TBD</td>
-                                            <td data-title="Time" data-start="2020-08-24 09:30:00" data-end="2020-08-24 11:30:00" data-days="" class="section-start">9:30 am - 11:30 am EDT EST</td>
+                                            <td data-title="Time" data-start="2020-08-24 09:30:00" data-end="2020-08-24 11:30:00" data-days="" class="section-start">TBD</td>
                                             <td data-title="Class"><a href="https://www.codeadvantage.org/online/advanced-coding" target="_blank" title="Python Level 3" style="text-decoration: none"><strong class="class-name" style="color: #4ccef0;">Python Level 3</strong></a>
                                                                                                                                     <div style="font-size: 12px; color: #707070; font-weight: bold;">Prerequisite: Level 2</div>
                                                                                     </td>
                                             <td data-title="Grade level">5th - 10th</td>
         
                                             <td data-title="Price">
-                                                $185									</td>
+                                                TBD									</td>
                                             <td>
                                                                                             <div class="pb-button pb-button-size-small">
                                                         <a href="#" class="pb-window-target-self section-register" data-id="NU0IAWN5QRJZ2ND2">
