robotics  page fix

--- a/templates/page/onlinerobotics.html
+++ b/templates/page/onlinerobotics.html
@@ -544,7 +544,7 @@
                                                     Sold Out
                                                     </strong>                                                                                                                                  <div style="font-size: 12px; color: #707070; font-weight: bold;">No iPads or Tablets</div>
                                             </td>
-                                            <td data-title="Grade level">5th - 10th</td>       
+                                            <td data-title="Grade level">3rd-5th</td>       
                                             <td data-title="Price">
                                                 TBD									
                                             </td>
@@ -557,7 +557,7 @@
                                             <td data-title="Class"><a href="https://www.codeadvantage.org/online/advanced-coding" target="_blank" title="Python Level 2" style="text-decoration: none"><strong class="class-name" style="color: #4ccef0;">Python Level 2</strong></a>
                                                 <div style="font-size: 12px; color: #707070; font-weight: bold;">Prerequisite: Level 1</div>
                                             </td>
-                                            <td data-title="Grade level">5th - 10th</td>
+                                            <td data-title="Grade level">3rd-5th</td>
                                             <td data-title="Price">
                                                 TBD									
                                             </td>
@@ -577,7 +577,7 @@
                                             <td data-title="Class"><a href="https://www.codeadvantage.org/online/advanced-coding" target="_blank" title="Python Level 3" style="text-decoration: none"><strong class="class-name" style="color: #4ccef0;">Python Level 3</strong></a>
                                                                                                                                     <div style="font-size: 12px; color: #707070; font-weight: bold;">Prerequisite: Level 2</div>
                                                                                     </td>
-                                            <td data-title="Grade level">5th - 10th</td>
+                                            <td data-title="Grade level">3rd-5th</td>
         
                                             <td data-title="Price">
                                                 TBD									</td>
@@ -599,7 +599,7 @@
                                             <td data-title="Class"><a href="https://www.codeadvantage.org/online/advanced-coding" target="_blank" title="Python: Animal Expedition" style="text-decoration: none"><strong class="class-name" style="color: #4ccef0;">Python: Animal Expedition</strong></a>
                                                                                                                                     <div style="font-size: 12px; color: #707070; font-weight: bold;">No iPads or Tablets</div>
                                                                                     </td>
-                                            <td data-title="Grade level">5th - 10th</td>
+                                            <td data-title="Grade level">3rd-5th</td>
         
                                             <td data-title="Price">
                                                 TBD									</td>
@@ -621,7 +621,7 @@
                                             <td data-title="Class"><a href="https://www.codeadvantage.org/online/advanced-coding" target="_blank" title="Python: Game Quest" style="text-decoration: none"><strong class="class-name" style="color: #4ccef0;">Python: Game Quest</strong></a>
                                                                                                                                     <div style="font-size: 12px; color: #707070; font-weight: bold;">No iPads or Tablets</div>
                                                                                     </td>
-                                            <td data-title="Grade level">5th - 10th</td>
+                                            <td data-title="Grade level">3rd-5th</td>
         
                                             <td data-title="Price">
                                                 TBD									</td>
@@ -643,7 +643,7 @@
                                             <td data-title="Class"><a href="https://www.codeadvantage.org/online/advanced-coding" target="_blank" title="Python Level 2" style="text-decoration: none"><strong class="class-name" style="color: #4ccef0;">Python Level 2</strong></a>
                                                                                                                                     <div style="font-size: 12px; color: #707070; font-weight: bold;">Prerequisite: Level 1</div>
                                                                                     </td>
-                                            <td data-title="Grade level">5th - 10th</td>
+                                            <td data-title="Grade level">3rd-5th</td>
         
                                             <td data-title="Price">
                                                 TBD									</td>
@@ -665,7 +665,7 @@
                                             <td data-title="Class"><a href="https://www.codeadvantage.org/online/advanced-coding" target="_blank" title="Python: Game Quest" style="text-decoration: none"><strong class="class-name" style="color: #4ccef0;">Python: Game Quest</strong></a>
                                                                                                                                     <div style="font-size: 12px; color: #707070; font-weight: bold;">No iPads or Tablets</div>
                                                                                     </td>
-                                            <td data-title="Grade level">5th - 10th</td>
+                                            <td data-title="Grade level">3rd-5th</td>
         
                                             <td data-title="Price">
                                                 TBD									</td>
@@ -687,7 +687,7 @@
                                             <td data-title="Class"><a href="https://www.codeadvantage.org/online/advanced-coding" target="_blank" title="Python Level 3" style="text-decoration: none"><strong class="class-name" style="color: #4ccef0;">Python Level 3</strong></a>
                                                                                                                                     <div style="font-size: 12px; color: #707070; font-weight: bold;">Prerequisite: Level 2</div>
                                                                                     </td>
-                                            <td data-title="Grade level">5th - 10th</td>
+                                            <td data-title="Grade level">3rd-5th</td>
         
                                             <td data-title="Price">
                                                 TBD									</td>
