robotics  page fix

--- a/templates/page/onlinerobotics.html
+++ b/templates/page/onlinerobotics.html
@@ -538,7 +538,7 @@
                                     <tbody>
                                         <tr>
                                             <td data-title="Session Dates">TBD</td>
-                                            <td data-title="Time" data-start="2020-08-10 09:30:00" data-end="2020-08-10 11:30:00" data-days="" class="section-start">TBD</td>
+                                            <td data-title="Time" class="section-start">TBD</td>
                                             <td data-title="Class">
                                                 <a href="https://www.codeadvantage.org/online/advanced-coding" target="_blank" title="Python Level 1" style="text-decoration: none">
                                                     <strong class="class-name" style="color: #4ccef0;">
@@ -559,7 +559,7 @@
                                         </tr>
                                         <tr>
                                             <td data-title="Session Dates">TBD</td>
-                                            <td data-title="Time" data-start="2020-08-10 11:15:00" data-end="2020-08-10 13:15:00" data-days="" class="section-start">TBD</td>
+                                            <td data-title="Time" class="section-start">TBD</td>
                                             <td data-title="Class">
                                                 <a href="https://www.codeadvantage.org/online/advanced-coding" 
                                                 target="_blank" title="Python Level 2" style="text-decoration: none">
@@ -576,9 +576,9 @@
                                             <td>
                                                 <div class="pb-button pb-button-size-small">
                                                     <a href="#" class="pb-window-target-self section-register" 
-                                                    data-id="GP2AHBTAGOMHFPVY">
+                                                    data-id="">
                                                         <span class="pb-button-box">
-                                                            <span class="pb-button-content">Register</span>
+                                                            <span class="pb-button-content"> Sign Up</span>
                                                         </span>
                                                     </a>
                                                 </div>
@@ -586,8 +586,7 @@
                                         </tr>
                                         <tr>
                                             <td data-title="Session Dates">TBD</td>
-                                            <td data-title="Time" data-start="2020-08-10 13:15:00" data-end="2020-08-10 15:15:00" 
-                                            data-days="" class="section-start">TBD</td>
+                                            <td data-title="Time"  class="section-start">TBD</td>
                                             <td data-title="Class">
                                                 <a href="https://www.codeadvantage.org/online/advanced-coding" 
                                                 target="_blank" title="Python Level 3" style="text-decoration: none">
@@ -605,9 +604,10 @@
                                             </td>
                                             <td>
                                                 <div class="pb-button pb-button-size-small">
-                                                    <a href="#" class="pb-window-target-self section-register" data-id="LVMOTRQFCHV86UHO">
+                                                    <a href="#" class="pb-window-target-self section-register" 
+                                                    data-id="">
                                                         <span class="pb-button-box">
-                                                            <span class="pb-button-content">Register</span>
+                                                            <span class="pb-button-content"> Sign Up</span>
                                                         </span>
                                                     </a>
                                                 </div>
@@ -615,7 +615,7 @@
                                         </tr>
                                         <tr>
                                             <td data-title="Session Dates">TBD</td>
-                                            <td data-title="Time" data-start="2020-08-10 18:15:00" data-end="2020-08-10 20:15:00" data-days="" class="section-start">TBD</td>
+                                            <td data-title="Time" data-days="" class="section-start">TBD</td>
                                             <td data-title="Class">
                                                 <a href="https://www.codeadvantage.org/online/advanced-coding" target="_blank" title="Python: Animal Expedition" style="text-decoration: none">
                                                     <strong class="class-name" style="color: #4ccef0;">Python: Animal Expedition</strong>
@@ -629,9 +629,9 @@
                                             <td>
                                                 <div class="pb-button pb-button-size-small">
                                                     <a href="#" class="pb-window-target-self section-register" 
-                                                    data-id="MSVXOGKCU35ECLUK">
+                                                    data-id="">
                                                         <span class="pb-button-box">
-                                                            <span class="pb-button-content">Register</span>
+                                                            <span class="pb-button-content"> Sign Up</span>
                                                         </span>
                                                     </a>
                                                 </div>
