--- a/templates/page/onlinerobotics.html
+++ b/templates/page/onlinerobotics.html
@@ -595,7 +595,7 @@
                                                     </strong>
                                                  </a>
                                                 <div style="font-size: 12px; color: #707070; font-weight: bold;">
-                                                    Prerequisite: Level 2
+                                                    Required:<a href="https://education.lego.com/en-us/products/lego-education-wedo-2-0-core-set/45300" title="Lego WEDO 2.0 kit"  target="_blank">Lego WEDO 2.0 kit </a>
                                                 </div>
                                             </td>
                                             <td data-title="Grade level">3rd-5th</td>
