--- a/templates/page/onlinerobotics.html
+++ b/templates/page/onlinerobotics.html
@@ -540,15 +540,19 @@
                                             <td data-title="Session Dates">TBD</td>
                                             <td data-title="Time" class="section-start">TBD</td>
                                             <td data-title="Class">
-                                                <a href="https://www.codeadvantage.org/online/advanced-coding" target="_blank" title="Python Level 1" style="text-decoration: none">
+                                                <a href="https://shust-hub.github.io/CA/templates/page/myfriend.html" target="_blank" title="Python Level 1" style="text-decoration: none">
                                                     <strong class="class-name" style="color: #4ccef0;">
-                                                        Python Level 1
+                                                        <i>
+                                                            My Friends
+                                                        </i>
+                                                            Online
                                                     </strong>
                                                 </a>
                                                 <br>
                                                 <strong style="color:#FE6500">
                                                     Sold Out
-                                                </strong>                                                                                                                                  <div style="font-size: 12px; color: #707070; font-weight: bold;">No iPads or Tablets</div>
+                                                </strong>                                                                                                                                  
+                                                <div style="font-size: 12px; color: #707070; font-weight: bold;">No iPads or Tablets</div>
                                             </td>
                                             <td data-title="Grade level">3rd-5th</td>       
                                             <td data-title="Price">
@@ -561,9 +565,13 @@
                                             <td data-title="Session Dates">TBD</td>
                                             <td data-title="Time" class="section-start">TBD</td>
                                             <td data-title="Class">
-                                                <a href="https://www.codeadvantage.org/online/advanced-coding" 
-                                                target="_blank" title="Python Level 2" style="text-decoration: none">
-                                                    <strong class="class-name" style="color: #4ccef0;">Python Level 2</strong>
+                                                <a href="https://shust-hub.github.io/CA/templates/page/myfriend.html" target="_blank" title="Python Level 1" style="text-decoration: none">
+                                                    <strong class="class-name" style="color: #4ccef0;">
+                                                        <i>
+                                                            My Friends
+                                                        </i>
+                                                            Online
+                                                    </strong>
                                                 </a>
                                                 <div style="font-size: 12px; color: #707070; font-weight: bold;">
                                                     Required:<a href="https://education.lego.com/en-us/products/lego-education-wedo-2-0-core-set/45300" title="Lego WEDO 2.0 kit"  target="_blank">Lego WEDO 2.0 kit </a>
@@ -595,7 +603,7 @@
                                                     </strong>
                                                  </a>
                                                 <div style="font-size: 12px; color: #707070; font-weight: bold;">
-                                                    Required:<a href="https://education.lego.com/en-us/products/lego-education-wedo-2-0-core-set/45300" title="Lego WEDO 2.0 kit"  target="_blank">Lego WEDO 2.0 kit </a>
+                                                    Required: <a href="https://education.lego.com/en-us/products/lego-education-wedo-2-0-core-set/45300" title="Lego WEDO 2.0 kit"  target="_blank">Lego WEDO 2.0 kit </a>
                                                 </div>
                                             </td>
                                             <td data-title="Grade level">3rd-5th</td>
