robotics  page fix

--- a/templates/page/onlinerobotics.html
+++ b/templates/page/onlinerobotics.html
@@ -540,7 +540,7 @@
                                             <td data-title="Session Dates">TBD</td>
                                             <td data-title="Time" class="section-start">TBD</td>
                                             <td data-title="Class">
-                                                <a href="https://shust-hub.github.io/CA/templates/page/myfriend.html" target="_blank" title="Python Level 1" style="text-decoration: none">
+                                                <a href="https://shust-hub.github.io/CA/templates/page/myfriend.html" target="_blank" title="My Friends Online" style="text-decoration: none">
                                                     <strong class="class-name" style="color: #4ccef0;">
                                                         <i>
                                                             My Friends
@@ -565,7 +565,7 @@
                                             <td data-title="Session Dates">TBD</td>
                                             <td data-title="Time" class="section-start">TBD</td>
                                             <td data-title="Class">
-                                                <a href="https://shust-hub.github.io/CA/templates/page/myfriend.html" target="_blank" title="Python Level 1" style="text-decoration: none">
+                                                <a href="https://shust-hub.github.io/CA/templates/page/myfriend.html" target="_blank" title="My Friends Online" style="text-decoration: none">
                                                     <strong class="class-name" style="color: #4ccef0;">
                                                         <i>
                                                             My Friends
@@ -574,7 +574,7 @@
                                                     </strong>
                                                 </a>
                                                 <div style="font-size: 12px; color: #707070; font-weight: bold;">
-                                                    Required:<a href="https://education.lego.com/en-us/products/lego-education-wedo-2-0-core-set/45300" title="Lego WEDO 2.0 kit"  target="_blank">Lego WEDO 2.0 kit </a>
+                                                    Required: <a href="https://education.lego.com/en-us/products/lego-education-wedo-2-0-core-set/45300" title="Lego WEDO 2.0 kit"  target="_blank">Lego WEDO 2.0 kit </a>
                                                 </div>
                                             </td>
                                             <td data-title="Grade level">3rd-5th</td>
@@ -583,7 +583,7 @@
                                             </td>
                                             <td>
                                                 <div class="pb-button pb-button-size-small">
-                                                    <a href="#" class="pb-window-target-self section-register" 
+                                                    <a href="https://shust-hub.github.io/CA/templates/page/myfriend.html" class="pb-window-target-self section-register" 
                                                     data-id="">
                                                         <span class="pb-button-box">
                                                             <span class="pb-button-content"> Sign Up</span>
@@ -596,10 +596,10 @@
                                             <td data-title="Session Dates">TBD</td>
                                             <td data-title="Time"  class="section-start">TBD</td>
                                             <td data-title="Class">
-                                                <a href="https://www.codeadvantage.org/online/advanced-coding" 
-                                                target="_blank" title="Python Level 3" style="text-decoration: none">
+                                                <a href="https://shust-hub.github.io/CA/templates/page/privateclasses.html" 
+                                                target="_blank" title="Private Class" style="text-decoration: none">
                                                     <strong class="class-name" style="color: #4ccef0;">
-                                                        Python Level 3
+                                                        Private Class 
                                                     </strong>
                                                  </a>
                                                 <div style="font-size: 12px; color: #707070; font-weight: bold;">
@@ -625,8 +625,8 @@
                                             <td data-title="Session Dates">TBD</td>
                                             <td data-title="Time" data-days="" class="section-start">TBD</td>
                                             <td data-title="Class">
-                                                <a href="https://www.codeadvantage.org/online/advanced-coding" target="_blank" title="Python: Animal Expedition" style="text-decoration: none">
-                                                    <strong class="class-name" style="color: #4ccef0;">Python: Animal Expedition</strong>
+                                                <a href="https://shust-hub.github.io/CA/templates/page/privateclasses.html" target="_blank" title="Private Class" style="text-decoration: none">
+                                                    <strong class="class-name" style="color: #4ccef0;">Private Class </strong>
                                                 </a>
                                                 <div style="font-size: 12px; color: #707070; font-weight: bold;">No iPads or Tablets</div>
                                             </td>
@@ -636,7 +636,7 @@
                                             </td>
                                             <td>
                                                 <div class="pb-button pb-button-size-small">
-                                                    <a href="#" class="pb-window-target-self section-register" 
+                                                    <a href="https://shust-hub.github.io/CA/templates/page/privateclasses.html" class="pb-window-target-self section-register" 
                                                     data-id="">
                                                         <span class="pb-button-box">
                                                             <span class="pb-button-content"> Sign Up</span>
